--- a/examples/game/manifests/game.yaml
+++ b/examples/game/manifests/game.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: demo-ingress
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: "traefik"
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-ssl-redirect@kubernetescrd
@@ -21,6 +22,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: game
+  namespace: default
 spec:
   selector:
     matchLabels:
@@ -42,8 +44,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: game
+  namespace: default
 spec:
-  type: ClusterIP
   selector:
     app: game
   ports:
